--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+*.xml
+
+# manually...
+.DS_Store/
+.idea/
+cmake-build-debug
+.DS_Store
+.DS_Store
